Bug 165502 - [UI] Data provider dialog must clear preview data on applying data transformation
Summary: [UI] Data provider dialog must clear preview data on applying data transforma...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: Data-Provider
  Show dependency treegraph
 
Reported: 2025-02-27 20:49 UTC by Olivier Hallot
Modified: 2025-03-10 17:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample CSV file te show issue (6.20 KB, text/csv)
2025-02-27 20:49 UTC, Olivier Hallot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2025-02-27 20:49:38 UTC
Created attachment 199522 [details]
sample CSV file te show issue

Using Apply to visualize data provided does not clear the previous data visualization.

Step to reproduce
0) Download the attached CSV file
1) Open a blank spreadsheet
2) define a database range bigger than 6 columns, name it AAAA
3) open Data -> Data provider
4) on Database Range, select AAAA
5) On data format, set CSV
6) on URL, locate the downloaded CSV file
7) Press Apply. The data is loaded in the preview window
8) Select "Delete Columns" in the transformation list, press Add
9) enter 2;4 to delete column 2 and 4 (headers are Value and Region)
10) press Apply

Actual Results: The preview windows shows columns Date, Category, Employee, Region Employee

Expected results: The preview window must show only columns Date, Category, Employee in columns 1,2 and 3

the previous columns 4 and 5 are not cleared, thus leaving columns Region and Employee visible in columns 4 and 5

On pressing Apply, clear the preview beforehand.

Note: the extra columns are not loaded when pressing OK.
Comment 1 m_a_riosv 2025-02-28 01:38:08 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 12c1596b0fd152399bed90f3d26014a32efc24e3
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: en-GB
Calc: CL threaded
Comment 2 Rafael Lima 2025-03-09 22:19:57 UTC
Proposed patch here:
https://gerrit.libreoffice.org/c/core/+/182701
Comment 3 Commit Notification 2025-03-10 12:03:20 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/50ac0aa72f8af34ab180c8ea2060b0221afe0731

tdf#165502 Clear table preview when refreshing the data source

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.