tdf#165502 Clear table preview when refreshing the data source

Previously, when the Apply button was pressed for a second time in the "Data Provider" dialog, and the new dataset was smaller than the existing data, the content outside the new data range would still be visible in the preview.

This patch ensures that the preview is cleared before updating it.

Change-Id: I33861bba65d9059df2cf44fd76b74b0b981b9564
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182701
Reviewed-by: Olivier Hallot <olivier.hallot@libreoffice.org>
Tested-by: Jenkins